Tue Feb  8 01:00:21 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* process.c (proc_setgroups): add GC guard to prevent intermediate
	  variable from GC.

Mon Feb  7 22:56:16 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* lib/benchmark.rb (Benchmark#bmbm): use ensure clause instead of
	  Object#tap to restore STDOUT.sync.

Sun Feb  6 12:18:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (words, qwords): dispatch array events.  based on a
	  patch from Michael Edgar.  [Bug #4365].

Sat Feb  5 21:47:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (mlhs_basic): include mlhs_post for ripper.  a patch
	  from Michael Edgar at [ruby-core:35078].

Sat Feb  5 11:29:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/parser/parser.h (GET_PARSER): raise TypeError.

	* ext/json/parser/parser.rl (cParser_initialize): ditto.

	* ext/json/parser/parser.h (GET_PARSER): check if initialized.
	  [ruby-core:35079]

	* ext/json/parser/parser.rl (cParser_initialize): ditto.

Sun May  1 18:35:34 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/fileutils/fileasserts.rb (assert_block): little workaround
	  for [ruby-dev:43174].

Sat Feb  5 20:40:34 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/fileasserts.rb (assert_block): pass arguments
	  as-is.  [ruby-dev:43174]

Sat Feb  5 03:37:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::LowMethods): make low level methods
	  in NoWrite and DryRun to do nothing.  [ruby-dev:43129]

	* test/fileutils/fileasserts.rb: add message arguments.

	* test/fileutils/fileasserts.rb (Test::Unit::Assertions#assert_block):
	  show the given message.

Sat Feb  5 02:09:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_getline, parser_set_encode): set encoding of lines
	  in SCRIPT_LINES__ as source encoding.  [ruby-dev:43168]

Wed Apr  6 21:25:08 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
